# json-api-glib

./: README.md  json-glib-1.0.vapi  meson.build
src/: json-api-builder.vala  json-api-data-payload.vala  json-api-error-links.vala  json-api-error-source.vala  json-api-error.vala  json-api-errors-payload.vala  json-api-jsonapi-payload.vala  json-api-jsonapi.vala  json-api-link.vala  json-api-links.vala  json-api-meta-payload.vala  json-api-object.vala  json-api-pagination-links.vala  json-api-payload-links.vala  json-api-payload.vala  json-api-relationship-links.vala  json-api-relationship.vala  json-api-resource-links.vala  json-api-resource-payload.vala  json-api-resource.vala  json-api-resources-payload.vala  meson.build
